recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: not found: value levels
  	sierpinski(levels-1, length/2)
                   ^Sierpinski:3: error: not found: value levels
    sierpinski(levels-1, length/2)
               ^Sierpinski:5: error: not found: value levels
    sierpinski(levels-1, length/2)
               ^