recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  	sierpinski(levels-1, length/2)
  gauche(45);
    sierpinski(levels-1, length/2)
    droite(120)
    sierpinski(levels-1, length/2)
    gauche(45);
}